# OpenRhythm

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  OpenRhythm.sublime-project  coderules.md  install_libsoundio.sh  meson.build  readme.md  release-build.sh  todo.md  win-release-build.bat
cmake/: FindCldoc.cmake  FindCubeb.cmake  FindFMT.cmake  FindGLM.cmake  FindOggVorbis.cmake  FindPortaudio.cmake  FindSMF.cmake  FindSampleRate.cmake  FindSoundIO.cmake  FindTCLAP.cmake  FindYamlCpp.cmake  Findfmt.cmake  GettextTranslate.cmake
data/: default_config.yaml
data/shaders/: main.fs  main.glsl  main.vs  main110.fs  main110.vs  neck.vs  tail.gs
po/: .gitignore  CMakeLists.txt  Makevars  POTFILES.in  fr.po  meson.build
src/: config.hpp  config.hpp.in  config.hpp.in.meson  main.cpp  meson.build
src/core/: config.hpp.in  context.cpp  context.hpp  events.cpp  events.hpp  files.cpp  files.hpp  filesystem.cpp  filesystem.hpp  gl.hpp  image.cpp  image.hpp  keycode.cpp  keycode.hpp  mesh2d.cpp  mesh2d.hpp  meson.build  notemap.h  parameter.hpp  parser.cpp  parser.hpp  parseutils.hpp  resolver.cpp  resolver.hpp  shader.cpp  shader.hpp  smf.cpp  smf.hpp  stringutils.cpp  stringutils.hpp  texture.cpp  texture.hpp  timing.cpp  timing.hpp  utils.cpp  utils.hpp  vfs.cpp  vfs.hpp  window.cpp  window.hpp
src/core/audio/: basicAudio.cpp  basicAudio.hpp  buffer.cpp  buffer.hpp  codec.hpp  cubeboutput.cpp  cubeboutput.hpp  input.hpp  mixer.cpp  mixer.hpp  output.hpp  stream.hpp  streams.hpp  timestretch.cpp  timestretch.hpp  vorbissource.cpp  vorbissource.hpp
src/core/audio/codecs/: vorbis.cpp  vorbis.hpp
src/core/audio/output/: chrono.hpp  portaudio.cpp  portaudio.hpp  soundio.cpp  soundio.hpp
src/core/audio/streams/: resample.cpp  resample.hpp
src/core/configuration/: parameter.cpp  parameter.hpp
src/core/renderer/: batch.cpp  batch.hpp  mesh.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/game/: commonobjects.hpp  configuration.cpp  configuration.hpp  game.cpp  game.hpp  guitar.cpp  guitar.hpp  main.cpp  meson.build  parser.cpp  parser.hpp  song.cpp  song.hpp  trackelements.cpp  trackelements.hpp
src/game/configuration/: parameter.hpp
src/gl/: gl.hpp  gl_core32.c  gl_core32.h  gl_core33.c  gl_core33.h  gl_gl14shaderext.c  gl_gl14shaderext.h  gl_gl33compext.c  gl_gl33compext.h  readme.txt
src/midiplayer/: MidiPlayer.cpp  MidiPlayer.hpp  midi_song.cpp  midi_song.hpp  midimain.cpp
src/tests/: audiotests.cpp  general_tests.cpp  meson.build  uitest.cpp
